Dark mode fixes

--- a/src/index.css
+++ b/src/index.css
@@ -115,6 +115,7 @@ header, footer, section
 }
 
 #features-section {
+    padding-bottom: 6rem;
     display: grid;
     column-gap: 1rem;
     grid-template-columns: 0.7fr 1fr;
@@ -130,7 +131,6 @@ header, footer, section
         column-gap: 4;
 
         .feature {
-
             display: grid;
             grid-template-columns: 1fr auto;
             column-gap: 1.5rem;
@@ -324,7 +324,7 @@ header, footer, section
                 }
 
                 padding: 24px;
-                border: 1px solid var(--button-border-color);
+                border: 1px solid var(--button-border-muted-color);
                 border-radius: 8px;
 
                 &.info {
@@ -385,7 +385,8 @@ header, footer, section
             input {
                 margin: 0;
                 border-radius: 8px 0 0 8px;
-                border: solid var(--button-border-color);
+                border: solid var(--button-border-muted-color);
+                background-color: #ffffff07;
                 border-width: 2px 0px 2px 2px;
                 padding: 1rem 2rem;
                 font-size: 1em;
@@ -398,6 +399,7 @@ header, footer, section
             }
 
             i {
+                color: var(--text-footer-color);;
                 font-size: 20px;
                 position: absolute;
                 left: 0.6rem;
